# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  LICENSE  LICENSE.template  Makefile  README.rst  pyproject.toml
docs/: conf.py  index.rst  license-headers.rst  requirements.txt
docs/_static/: pre-commit-hooks.css
pre_commit_hooks/: __init__.py  license_headers.py
